--- a/index.html
+++ b/index.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
-
 <html lang="en">
-<head>
+<head> <!-- [Behind the Scenes] -->
+
+
+	<!-- meta tags -->
 	<meta charset="utf-8" />
+	<meta name="description" content="Learn how to properly take care of your body">
+  	<meta name="keywords" content="health, exercise, diet, strength, cardio, stress, workout, eat right">
+  	<meta name="author" content="Michael Roberts">
 
-	<link rel="stylesheet" href="stles/slicknav.css">
-	<link rel="stylesheet" href="styles/normalize.css">
-	<link rel="stylesheet" href="styles/main.css">
-	            <!--- SSLickkkk -->
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+	<!-- Viewport - Necessary for Responsive Design -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+	<!-- shiv/shim - Helps Internet Explorer older than v. 9 work correctly with html5 -->
+	<!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+
+
+	<!-------------------------- Slicknav Links and Scripts -------------------------->
+	<!-- Slicknav Stylesheet link -->
+	<link rel="stylesheet" href="styles/slicknav.css">
+	<!-- jQuery CDN - needed to drive slicknav -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- link to local js slicknav script file -->
 	<script src="js/jquery.slicknav.min.js"></script>
-
+	<!-- slicknav function script - converts contents of #nav_menu to #mobilemenu -->
 	<script type="text/javascript">
 		$(document).ready(function(){
-		$('#nav_menu').slicknav({prependTo:"#mobilemenu"});
+			$('#nav_menu').slicknav({prependTo:"#mobilemenu"});
 		});
 	</script>
 
-	<title>Shape Up!</title>
-</head>
 
+	<!-- stylesheet links -->
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/main.css">
+
+	<!-- favicon link -->
+	<link rel="icon" href="images/favicon.ico">
+
+	<!-- title tag -->
+	<title>Shape Up</title>
+
+</head>
 
 <body>
 	<header class="clearfix">
-		<img src="images/shape_up_logo.png" alt="Logo Image">
+		<a href="index.html"> <img src="images/shape_up_logo.png" alt="Click here to return to the home page" title=" Click here to return to homeapage"></a> 
+		<div>
+
+		
 		<h2>Shape Up!</h2>
 		<h3>Find the <span class="shadow">best</span> fit for you</h3>
+	</div>
 	</header>
 
+	<!-------------------------- Navigation Menu ------------------------------------->
 	<nav id="mobilemenu"></nav>
-
 	<nav id="nav_menu">
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -55,6 +81,7 @@
 		</ul>
 	</nav>
 
+	<!------------------------------ Main Elements --------------------------------------->
 	<main>
 
 		<aside id="leftcol">
@@ -73,11 +100,8 @@
 
 		<section>
 			<h1>Get ready to Shape Up!</h1>
-
 			<p>How many times have you started a new workout routine or diet? And how many times has it failed to give you the results you want? Now, with the help of this site, you can learn about the exercises and diet that work best for you. We offer personalized programs as well as access to several health and dieting tools. So don't wait! Get started looking and feeling better today.</p>
-
 			<p>As fitness expert Amanda Russell said:</p>
-
 			<blockquote>Fitness is about so much more than exercise. It&apos;s a catalyst for positive change, and it affects every aspect of your life.</blockquote>
 
 			<h3>What We Offer</h3>
@@ -96,7 +120,8 @@
 		</section>
 
 		<aside id="rightcol">
-			<h3>How to prepare to Shape Up!</h3>
+			<h3>How to Shape Up!</h3>
+
 			<h4>Get a check up</h4>
 			<p>If you have any health issues or take any medications, be sure to consult with your healthcare provider before beginning a new exercise or diet regimen.</p>
 			<h4>Dress for Success</h4>
@@ -106,14 +131,19 @@
 			<h4>Resist Temptation</h4>
 			<p>It's hard to eat right when everyone else is buying lunch at a fast food restaurant. Invest in some good food containers and bring your healthy lunch and snacks. Your body and your wallet will thank you.</p>
 		</aside>
-
-
-		
 	</main>
 
+	<!--------------------------- Footer ----------------------------------->
 	<footer>
 		<p>&copy; 2023 Shape Up!</p>
 	</footer>
-	
+
+	<script>
+        window.onload = function() {
+            var d = new Date();
+            document.getElementById("copyright").innerHTML = d.getFullYear();
+        }
+    </script>
+
 </body>
 </html>
